--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     <title>Percent Calculator In JavaScript</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-    <h1>Hello world</h1>
+
+<div class="container">
+    <div class="wrap">
+    <h1 class="text-center">Percent Calculator In JavaScript</h1>
+
+    <p>X is what % or Y</p>
     
+    <form id="xIsWhatPercentOfY">
+        <input type="text" id="numField1">is what of %
+        <input type="text" id="numField2">
+        <br />
+        <br />
+        <input type="submit" value="calculate"> 
+    </form>
+    
+    <h2 id="resultField"></h2>
+    </div>
+</div>
 
-
+<script type="text/JavaScript" src="scripts.js"></script>
 </body>
-</html>
+</html> 
